# unibar

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.circleci/: config.yml
.github/: main.workflow
assets/: display.ron
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/gbar/: all.html  index.html  sidebar-items.js  struct.Bar.html
doc/gbar/bar/: Bar.t.html  struct.Bar.html
doc/implementors/core/marker/: trait.Send.js  trait.Sync.js
doc/src/gbar/: bar.rs.html  fragment.rs.html  lib.rs.html  vertex.rs.html
doc/src/gbar/bar/: mod.rs.html
doc/src/gbar/state/: mod.rs.html
doc/src/unibar/: bar.rs.html  bundle.rs.html  color.rs.html  lib.rs.html  state.rs.html  workspace.rs.html
doc/src/unibar/bar/: mod.rs.html
doc/src/unibar/segment/: cpu.rs.html  date.rs.html  mod.rs.html
doc/src/unibar/state/: mod.rs.html
doc/src/unibar/system/: mod.rs.html  segment.rs.html  status.rs.html  workspace.rs.html
doc/unibar/: all.html  index.html  struct.Bar.html
doc/unibar/bar/: struct.Bar.html
src/: bar.rs  bundle.rs  cli.yaml  color.rs  fragment.rs  lib.rs  main.rs  state.rs  vertex.rs  workspace.rs
src/bar/: mod.rs  test.rs
src/segment/: cpu.rs  date.rs  mod.rs
src/state/: mod.rs
src/system/: mod.rs  segment.rs  status.rs  workspace.rs
