[package]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
edition = "2018"
name = "gbar"
version = "0.1.0"

[dependencies]
amethyst = "0.10.0"
clap = { version = "2.32.0", features = ["yaml"] }
env_logger = "0.6.0"
failure = "0.1.5"
i3ipc = "0.9.0"
log = "0.4.6"
winit = "0.18.1"

[[bin]]
name = "gbar"
path = "src/main.rs"
