[package]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
description = "A GPU accelerated status bar"
documentation = "https://saschagrunert.github.io/unibar/doc/unibar"
edition = "2018"
homepage = "https://github.com/saschagrunert/webapp.rs"
keywords = ["i3", "statusbar", "status", "i3wm", "bar"]
license = "MIT"
name = "unibar"
readme = "README.md"
repository = "https://github.com/saschagrunert/unibar"
version = "0.1.0"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst" }
chrono = "0.4.6"
clap = { version = "2.32.0", features = ["yaml"] }
failure = "0.1.5"
i3ipc = "0.9.0"
log = "0.4.6"
serde = "1.0.84"
serde_derive = "1.0.84"
uuid = { version = "0.7.1", features = ["v4"] }

[[bin]]
name = "unibar"
path = "src/main.rs"
